{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Menu",
            "id": "258ffb63-0c99-4330-b25f-7df3fe51578d",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "c792aa09-ca41-4e1d-87dd-f4ff3b8c59fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd73c0de-dbcf-48f6-8f5c-12408bf380ac",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "gameplay",
            "id": "73d6ba2b-0353-4cd2-af27-bacce436f354",
            "actions": [
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "533d2f34-f939-486a-9243-d4551bf1e9e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "4dddfbe8-5dc5-44f2-a725-d7b8b61e8031",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "9016d708-bb12-47c9-8ee9-c94cbc846036",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "9bd7998f-6eea-4378-83a7-5c232a62d9d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldPiece",
                    "type": "Button",
                    "id": "e1228e8f-e9ad-4603-97eb-2d77aa29a2f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HardDrop",
                    "type": "Button",
                    "id": "0ca0708d-54d2-4af8-a054-d7dcfff001b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FastDrop",
                    "type": "Button",
                    "id": "c0abcc6a-4b18-47a4-a864-84b2a3d145a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldLeft",
                    "type": "Button",
                    "id": "ecdd7f5e-478b-42b5-ac5e-446ba255b452",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HoldRight",
                    "type": "Button",
                    "id": "ce991c52-0ce4-4c93-9fb8-2f4b0f80139d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a9d8884-8037-4bcc-ba15-f492727d70cc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "810195b4-b09e-49fa-a4ed-8f8a48263e10",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77f5efeb-5fb9-4c0f-9042-a23e291c9fc0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a93057ae-f52e-40a2-94ba-153e14574b64",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e9e46eb-1628-4438-bd4f-db5105055f58",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HoldPiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "613487f5-8584-4cce-838d-0346eef181b3",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HardDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d5fe480-6691-4d1a-8fa3-60befc3d7e19",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "FastDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc4a4f3c-b028-4ceb-98cc-9f71d890f0f1",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HoldLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e5c7abd-a958-4d3d-a8da-1fd48212510a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "HoldRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}